--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=crud springboot
+
+# Configuração do banco de dados
+spring.datasource.url=jdbc:postgresql://localhost:5432/bd_spring
+spring.datasource.username=postgres
+spring.datasource.password=a123
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
